[package]
name = "tun2socks5"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
base64 = { version = "0.21" }
clap = { version = "4.4", features = ["derive"] }
ctrlc2 = { version = "3.5", features = ["tokio", "termination"] }
digest_auth = "0.3"
dotenvy = "0.15"
env_logger = "0.10"
httparse = "1.8"
ipstack = { path = "../ipstack" }
log = "0.4"
regex = "1.10"
socks5-impl = { path = "../socks5-impl" }
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
trust-dns-proto = "0.23"
tun = { path = "../rust-tun", features = ["async"] }
udp-stream = { version = "0.0", default-features = false }
unicase = "2.7"
url = "2.5"
id_alloc = { path = "../id_alloc" }
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
lru = "0.12.1"
bincode = "1.3.3"
serde_json = "1.0.108"
bytes = "1.5.0"
bimap = { version = "0.6.3", features = ["serde"] }
tarpc = { version = "0.34.0", features = [
    "serde",
    "serde-transport",
    "serde-transport-bincode",
    "tokio-serde",
    "unix",
] }
nsproxy-common = { version = "0.1.0", path = "../common" }
futures = "0.3.30"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
rand = "0.8.5"
